# cs_designer

./: .gitignore  CMakeLists.txt  README.md  designer.qrc  designer.rc
src/: CMakeLists.txt  designer_build_info.h.in
src/abstract/: abstract.cmake  abstract_actioneditor.cpp  abstract_actioneditor.h  abstract_dialoggui.cpp  abstract_dialoggui.h  abstract_dnditem.h  abstract_formeditor.cpp  abstract_formeditor.h  abstract_formeditorplugin.cpp  abstract_formeditorplugin.h  abstract_formwindow.cpp  abstract_formwindow.h  abstract_formwindowcursor.cpp  abstract_formwindowcursor.h  abstract_formwindowmanager.cpp  abstract_formwindowmanager.h  abstract_formwindowtool.cpp  abstract_formwindowtool.h  abstract_integration.cpp  abstract_integration.h  abstract_introspection.cpp  abstract_introspection.h  abstract_language.h  abstract_metadatabase.cpp  abstract_metadatabase.h  abstract_newformwidget.cpp  abstract_newformwidget.h  abstract_objectinspector.cpp  abstract_objectinspector.h  abstract_optionspage.h  abstract_promotioninterface.cpp  abstract_promotioninterface.h  abstract_propertyeditor.cpp  abstract_propertyeditor.h  abstract_resourcebrowser.cpp  abstract_resourcebrowser.h  abstract_settings.h  abstract_widgetbox.cpp  abstract_widgetbox.h  abstract_widgetdatabase.cpp  (+3 more)
src/designer/: designer.cmake  designer.cpp  designer.h  designer_actions.cpp  designer_actions.h  designer_appearanceoptions.cpp  designer_appearanceoptions.h  designer_command.cpp  designer_command.h  designer_components.cpp  designer_components.h  designer_dnditem.cpp  designer_dnditem.h  designer_dockwidget.cpp  designer_dockwidget.h  designer_enums.h  designer_formbuilder.cpp  designer_formbuilder.h  designer_formeditor_command.cpp  designer_formeditor_command.h  designer_formwindow.cpp  designer_formwindow.h  designer_formwindow_command.cpp  designer_formwindow_command.h  designer_formwindow_manager.cpp  designer_formwindow_manager.h  designer_introspection.cpp  designer_introspection.h  designer_membersheet.cpp  designer_membersheet.h  designer_menu.cpp  designer_menu.h  designer_menubar.cpp  designer_menubar.h  designer_object_inspector.cpp  designer_object_inspector.h  designer_promotion.cpp  designer_promotion.h  designer_promotion_dialog.cpp  designer_promotion_dialog.h  (+53 more)
src/dialogs/: appfont_dialog.cpp  appfont_dialog.h  code_dialog.cpp  code_dialog.h  dialogs.cmake  newaction_dialog.cpp  newaction_dialog.h  newform.cpp  newform.h  newform_widget.cpp  newform_widget.h  order_dialog.cpp  order_dialog.h  preferences_dialog.cpp  preferences_dialog.h  saveform_as_template.cpp  saveform_as_template.h  signalslot_dialog.cpp  signalslot_dialog.h  toolbar_dialog.cpp  toolbar_dialog.h
src/editor/: editor.cmake
src/editor/action_editor/: action_editor.cpp  action_editor.h  action_provider.h  action_repository.cpp  action_repository.h
src/editor/buddy_editor/: buddyeditor.cpp  buddyeditor.h  buddyeditor_plugin.cpp  buddyeditor_plugin.h  buddyeditor_tool.cpp  buddyeditor_tool.h
src/editor/form_editor/: default_actionprovider.cpp  default_actionprovider.h  default_container.cpp  default_container.h  default_layoutdecoration.cpp  default_layoutdecoration.h  deviceprofiledialog.cpp  deviceprofiledialog.h  dpi_chooser.cpp  dpi_chooser.h  embedded_options_page.cpp  embedded_options_page.h  embeddedoptionspage.cpp  formeditor.cpp  formeditor.h  formeditor_optionspage.cpp  formeditor_optionspage.h  formwindow.cpp  formwindow.h  formwindow_dnditem.cpp  formwindow_dnditem.h  formwindow_widgetstack.cpp  formwindow_widgetstack.h  formwindowcursor.cpp  formwindowcursor.h  formwindowmanager.cpp  formwindowmanager.h  formwindowsettings.cpp  formwindowsettings.h  itemview_propertysheet.cpp  itemview_propertysheet.h  layout_propertysheet.cpp  layout_propertysheet.h  layoutwidget_propertysheet.cpp  layoutwidget_propertysheet.h  line_propertysheet.cpp  line_propertysheet.h  mainwindow_container.cpp  mainwindow_container.h  mdi_area_container.cpp  (+26 more)
src/editor/gradient_editor/: color_button.cpp  color_button.h  color_line.cpp  color_line.h  gradient_dialog.cpp  gradient_dialog.h  gradient_editor.cpp  gradient_editor.h  gradient_manager.cpp  gradient_manager.h  gradient_select.cpp  gradient_select.h  gradient_utils.cpp  gradient_utils.h  gradient_view.h  (+29 more)
src/formbuilder/: abstract_formbuilder.cpp  abstract_formbuilder.h  formbuilder.cmake  formbuilder.cpp  formbuilder.h  formbuilderextra.cpp  formbuilderextra.h  properties.cpp  properties.h  resourcebuilder.cpp  resourcebuilder.h  textbuilder.cpp  textbuilder.h  ui4.cpp  ui4.h
src/lib/: lib.cmake
src/main/: main.cmake  main.cpp  mainwindow.cpp  mainwindow.h
src/menus/: button_taskmenu.cpp  button_taskmenu.h  combobox_taskmenu.cpp  combobox_taskmenu.h  containerwidget_taskmenu.cpp  containerwidget_taskmenu.h  groupbox_taskmenu.cpp  groupbox_taskmenu.h  label_taskmenu.cpp  label_taskmenu.h  layout_taskmenu.cpp  layout_taskmenu.h  lineedit_taskmenu.cpp  lineedit_taskmenu.h  listwidget_taskmenu.cpp  listwidget_taskmenu.h  menu_taskmenu.cpp  menu_taskmenu.h  menus.cmake  tablewidget_taskmenu.cpp  tablewidget_taskmenu.h  taskmenu.h  taskmenu_component.cpp  taskmenu_component.h  textedit_taskmenu.cpp  textedit_taskmenu.h  toolbar_taskmenu.cpp  toolbar_taskmenu.h  treewidget_taskmenu.cpp  treewidget_taskmenu.h
src/preview/: preview.cmake  preview_config_widget.cpp  preview_config_widget.h  preview_frame.cpp  preview_frame.h  preview_manager.cpp  preview_manager.h  preview_widget.cpp  preview_widget.h
src/property_browser/: button_propertybrowser.cpp  button_propertybrowser.h  property_browser.cmake  propertybrowser.cpp  propertybrowser_utils.cpp  propertymanager.cpp  tree_propertybrowser.h  variantproperty.h
src/taskmenu/: button_taskmenu.cpp  button_taskmenu.h  combobox_taskmenu.cpp  label_taskmenu.cpp  layout_taskmenu.cpp  layout_taskmenu.h  lineedit_taskmenu.cpp  listwidget_taskmenu.cpp  menu_taskmenu.cpp  tablewidget_taskmenu.cpp  tablewidget_taskmenu.h  taskmenu.cmake  taskmenu.h  taskmenu_component.cpp  textedit_taskmenu.cpp  toolbar_taskmenu.h  treewidget_taskmenu.cpp
(+375 files in other folders)
